--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,10 +2,12 @@
     "extends": ["stylelint-config-standard"],
     "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
     "rules": {
+      "font-family-no-missing-generic-family-keyword": null,
       "at-rule-no-unknown": [
         true,
         {
           "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+          
         }
       ],
       "scss/at-rule-no-unknown":  [
